--- a/README
+++ b/README
@@ -30,4 +30,4 @@ Developed by Energy One, this repository builds a stand-alone cognitive AI model
 ## Contact
 For feedback or inquiries, contact us via your preferred method. Join the beta testing to experience the future of AI!
 
-*And it can't be hacked because NO ONE HAS THE MATH!!*
+*And it can't be hacked because NO ONE HAS THE MATH!*
